--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-FreightFrenzy:1.0.0'
     implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
+    implementation 'com.roboctopi:Cuttlefish:1.0.0'
+
 
     implementation project(':FtcDashboard')
 }
