--- a/FtcDashboard/build.gradle
+++ b/FtcDashboard/build.gradle
@@ -21,11 +21,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-    namespace 'com.acmerobotics.dashboard'
-    lint {
+
+    lintOptions {
         abortOnError false
     }
-
 }
 
 node {
