--- a/TeamCode/src/main/AndroidManifest.xml
+++ b/TeamCode/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
      So it won't ultimately be as empty as it might here appear to be :-) -->
 
 <!-- The package name here determines the package for your R class and your BuildConfig class -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="org.firstinspires.ftc.teamcode"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <application/>
 </manifest>
